fix footer alignment

--- a/src/css/components/_footer.css
+++ b/src/css/components/_footer.css
@@ -12,7 +12,7 @@
   }
 
   & .container {
-    max-width: 90%;
+    max-width: 100rem;
   }
 
   & a {
