--- a/src/css/pages/_home.css
+++ b/src/css/pages/_home.css
@@ -1,7 +1,7 @@
 main.home {
 
   & .container {
-    max-width: 1000px
+    max-width: 100rem
   }
 
   & .hero {
